--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install Sphinx Requirements
+        run: pip install -r $GITHUB_WORKSPACE/docs_src/requirements.txt
+      
+      - name: Make the docs
+        working-directory: $GITHUB_WORKSPACE/docs_src
+        run: make doc
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
