--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Install Sphinx Requirements
-        run: pip install -r $GITHUB_WORKSPACE/docs_src/requirements.txt
+        working-directory: ${{ github.workspace }}/docs_src
+        run: python3 -m pip install -r requirements.txt
       
       - name: Make the docs
-        working-directory: $GITHUB_WORKSPACE/docs_src
+        working-directory: ${{ github.workspace }}/docs_src
         run: make doc
 
       # Runs a set of commands using the runners shell
