--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,16 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
-      - name: Install required modules
-        run: python3 -m pip install setuptools
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8.x'
+
+#      - name: Install required modules
+#        run: python3 -m pip install setuptools
         
       - name: Install Sphinx Requirements
         working-directory: ${{ github.workspace }}/docs_src
-        run: python3 -m pip install -r requirements.txt
+        run: python -m pip install -r requirements.txt
       
       - name: Make the docs
         working-directory: ${{ github.workspace }}/docs_src
