--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Install Sphinx Requirements
         working-directory: ${{ github.workspace }}/docs_src
         run: python -m pip install -r requirements.txt
+
+      # otherwise build will fail as ref data doesnt exist
+      - name: Manually edit config file
+        working-directory: ${{ github.workspace }}/gtdbtk/config
+        run: cat config.py | grep AF_THRESHOLD > config.py
       
       - name: Make the docs
         working-directory: ${{ github.workspace }}/docs_src
