--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,14 +20,24 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
           python-version: '3.8'
 
+      - uses: actions/checkout@v2
+        with:
+          path: master
+
+      - uses: actions/checkout@v2
+        with:
+          ref: gh_pages
+          path: gh_pages
+
+      - name: Introspect
+        run: ls -la
+
       - name: Install Sphinx Requirements
-        working-directory: ${{ github.workspace }}/docs_src
+        working-directory: ${{ github.workspace }}/master/docs_src
         run: |
           sudo apt-get update -y
           sudo apt-get install -y pandoc
@@ -36,11 +46,11 @@ jobs:
 
       # otherwise build will fail as ref data doesnt exist
       - name: Manually edit config file
-        working-directory: ${{ github.workspace }}/gtdbtk/config
+        working-directory: ${{ github.workspace }}/master/gtdbtk/config
         run: grep AF_THRESHOLD config.py >  config2.py && mv config2.py config.py
       
       - name: Make the docs
-        working-directory: ${{ github.workspace }}/docs_src
+        working-directory: ${{ github.workspace }}/master/docs_src
         run: make doc
 
       # Runs a set of commands using the runners shell
