--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,5 +62,5 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add --all
-          git commit -m "docs update" -a
+          git diff-index --quiet HEAD || git commit -m "docs update" -a
           git push
